--- a/frame/app/build.gradle
+++ b/frame/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     })
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:support-v4:23.+'
 
     implementation 'org.capnproto:runtime:0.1.1'
